# a_maze_ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze_render.py  pyproject.toml
maze/: generator.py  parser.py  solver.py
mazegen/: __init__.py  generator.py
