[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mazegen-youlogin"
version = "1.0.0"
description = "Reusable maze generator using the recursive backtracker algorithm"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]